# mosquitto_plugin

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: ci.yml
example-acl/: Cargo.toml  README.md  mosquitto.conf
example-acl/src/: lib.rs
examples/: acl.conf  auth.conf  auth.rs  basic-auth.conf  basic-auth.rs  extended-auth.conf  extended-auth.rs
src/: dynlib.rs  lib.rs  mosquitto_calls.rs  mosquitto_dev.rs
