[package]
name = "mosquitto-plugin"
version = "0.1.1"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/TotalKrill/mosquitto_plugin.git"
description = "A simple way to create plugins for mosquitto, using rust code"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53"
