[package]
name = "mosquitto-plugin"
version = "1.3.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/TotalKrill/mosquitto_plugin.git"
description = "A simple way to create plugins for mosquitto, using rust code"

[[example]]
name = "basic-auth"
crate-type = ["cdylib"]

[[example]]
name = "extended-auth"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
